--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit>=1.10.0
-opencv-python>=4.5.0
-numpy>=1.21.0
-graphviz>=0.16
-streamlit-sortables
-torch==1.12.0
+streamlit==1.10.0
+opencv-python==4.5.3.56
+numpy==1.21.2
+graphviz==0.16
+streamlit-sortables==0.2.0
+torch==1.12.0 --index-url https://download.pytorch.org/whl/cpu
+pandas==1.3.3
+Pillow==8.4.0
