--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit==1.10.0
-opencv-python==4.5.3.56
-numpy==1.21.2
-graphviz==0.16
-streamlit-sortables==0.2.0
-torch==1.12.0 --index-url https://download.pytorch.org/whl/cpu
-pandas==1.3.3
-Pillow==8.4.0
+streamlit>=1.10.0
+opencv-python>=4.5.0
+numpy>=1.21.0
+pandas>=1.3.0
+Pillow>=9.0.0
+matplotlib>=3.4.0
+scikit-image>=0.18.0
+scipy>=1.7.0
+graphviz>=0.16
+streamlit-sortables>=0.2.0
