--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.10.0
-opencv-python>=4.5.0
-numpy>=1.21.0
+opencv-python==4.9.0.80
+numpy==1.26.4
 pandas>=1.3.0
 Pillow>=9.0.0
 matplotlib>=3.4.0
@@ -8,3 +8,10 @@ scikit-image>=0.18.0
 scipy>=1.7.0
 graphviz>=0.16
 streamlit-sortables>=0.2.0
+torch==2.0.1
+torchvision==0.15.2
+torchaudio==2.0.2
+gdown==5.1.0
+basicsr==1.4.2
+realesrgan==0.3.0
+timm==0.9.12
